paxquery-xparser/src/main/java/fr/inria/oak/paxquery/xparser/XParser.java
/* Generated By:JavaCC: Do not edit this line. XParser.java */
package fr.inria.oak.paxquery.xparser;

public class XParser implements XParserConstants {
  public static void main(String args[]) throws ParseException
  {
    boolean success = false;
        XParser parser = new XParser(System.in);
        while(true)
        {
                success = false;
                System.out.println("Enter an XPath (subset) expresion and hit ENTER: ");
                try
                {

                        parser.Start();
                        success = true;
                        System.out.println("CORRECT");
                }
                catch(Exception ex)
                {
                  success = false;
                        System.out.println("EXCEPTION: "+ex.getMessage());
                }
                catch(Error er)
                {
                  success = false;
                        System.out.println("ERROR: "+er.getMessage());
                }
                finally
                {
                  System.out.println("Success: "+success);
                  parser.ReInit(System.in);
                }
        }
  }

  public static boolean test_main(String query)
  {
    try
    {
      XParser parser = new XParser(new java.io.ByteArrayInputStream(query.getBytes()));
      parser.Start();
          System.out.println("CORRECT");
      return true;
    }
    catch(Exception ex)
    {
      System.out.println("Exception on query: "+query);
      System.out.println(ex.getMessage());
      return false;
    }
    catch(Error er)
    {
      System.out.println("Error on query: "+query);
      System.out.println(er.getMessage());
      return false;
    }
  }

  final public void Start() throws ParseException {
    Expr();
    jj_consume_token(3);
  }

  final public void Expr() throws ParseException {
    OrExpr();
  }

  final public void OrExpr() throws ParseException {
    AndExpr();
    OrExpr2();
  }

  final public void OrExpr2() throws ParseException {
    if (jj_2_1(5)) {
      jj_consume_token(4);
      AndExpr();
      OrExpr2();
    } else {

    }
  }

  final public void AndExpr() throws ParseException {
    EqualityExpr();
    AndExpr2();
  }

  final public void AndExpr2() throws ParseException {
    if (jj_2_2(5)) {
      jj_consume_token(5);
      EqualityExpr();
      AndExpr2();
    } else {

    }
  }

  final public void EqualityExpr() throws ParseException {
    RelationalExpr();
    EqualityExpr2();
  }

  final public void EqualityExpr2() throws ParseException {
    if (jj_2_3(5)) {
      jj_consume_token(6);
      RelationalExpr();
      EqualityExpr2();
    } else if (jj_2_4(5)) {
      jj_consume_token(7);
      RelationalExpr();
      EqualityExpr2();
    } else {

    }
  }

  final public void RelationalExpr() throws ParseException {
    AdditiveExpr();
    RelationalExpr2();
  }

  final public void RelationalExpr2() throws ParseException {
    if (jj_2_5(5)) {
      jj_consume_token(8);
      AdditiveExpr();
      RelationalExpr2();
    } else if (jj_2_6(5)) {
      jj_consume_token(9);
      AdditiveExpr();
      RelationalExpr2();
    } else if (jj_2_7(5)) {
      jj_consume_token(10);
      AdditiveExpr();
      RelationalExpr2();
    } else if (jj_2_8(5)) {
      jj_consume_token(11);
      AdditiveExpr();
      RelationalExpr2();
    } else {

    }
  }

  final public void AdditiveExpr() throws ParseException {
    MultiplicativeExpr();
    AdditiveExpr2();
  }

  final public void AdditiveExpr2() throws ParseException {
    if (jj_2_9(5)) {
      jj_consume_token(12);
      MultiplicativeExpr();
      AdditiveExpr2();
    } else if (jj_2_10(5)) {
      jj_consume_token(13);
      MultiplicativeExpr();
      AdditiveExpr2();
    } else {

    }
  }

  final public void MultiplicativeExpr() throws ParseException {
    UnaryExpr();
    MultiplicativeExpr2();
  }

  final public void MultiplicativeExpr2() throws ParseException {
    if (jj_2_11(5)) {
      jj_consume_token(14);
      UnaryExpr();
      MultiplicativeExpr2();
    } else if (jj_2_12(5)) {
      jj_consume_token(15);
      UnaryExpr();
      MultiplicativeExpr2();
    } else if (jj_2_13(5)) {
      jj_consume_token(16);
      UnaryExpr();
      MultiplicativeExpr2();
    } else {

    }
  }

  final public void UnaryExpr() throws ParseException {
    if (jj_2_14(5)) {
      UnionExpr();
    } else if (jj_2_15(5)) {
      jj_consume_token(13);
      UnaryExpr();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void UnionExpr() throws ParseException {
    ValueExpr();
    label_1:
    while (true) {
      if (jj_2_16(5)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(17);
      ValueExpr();
    }
  }

  final public void ValueExpr() throws ParseException {
    if (jj_2_20(5)) {
      FilterExpr();
      if (jj_2_19(5)) {
        if (jj_2_17(5)) {
          jj_consume_token(18);
        } else if (jj_2_18(5)) {
          jj_consume_token(19);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        RelativePathExpr();
      } else {
        ;
      }
    } else if (jj_2_21(5)) {
      PathExpr();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void PathExpr() throws ParseException {
    if (jj_2_23(5)) {
      jj_consume_token(18);
      if (jj_2_22(5)) {
        RelativePathExpr();
      } else {
        ;
      }
    } else if (jj_2_24(5)) {
      jj_consume_token(19);
      RelativePathExpr();
    } else if (jj_2_25(5)) {
      RelativePathExpr();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void RelativePathExpr() throws ParseException {
    StepExpr();
    label_2:
    while (true) {
      if (jj_2_26(5)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_27(5)) {
        jj_consume_token(18);
      } else if (jj_2_28(5)) {
        jj_consume_token(19);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      StepExpr();
    }
  }

  final public void StepExpr() throws ParseException {
    AxisStep();
  }

  final public void AxisStep() throws ParseException {
    ForwardStep();
    PredicateList();
  }

  final public void ForwardStep() throws ParseException {
    AbbrevForwardStep();
  }

  final public void AbbrevForwardStep() throws ParseException {
    if (jj_2_29(5)) {
      jj_consume_token(20);
    } else {
      ;
    }
    NodeTest();
  }

  final public void NodeTest() throws ParseException {
    if (jj_2_30(5)) {
      KindTest();
    } else if (jj_2_31(5)) {
      NameTest();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void KindTest() throws ParseException {
    TextTest();
  }

  final public void NameTest() throws ParseException {
    if (jj_2_32(5)) {
      jj_consume_token(15);
    } else if (jj_2_33(5)) {
      jj_consume_token(16);
    } else if (jj_2_34(5)) {
      QName();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void FilterExpr() throws ParseException {
    PrimaryExpr();
    PredicateList();
  }

  final public void PredicateList() throws ParseException {
    label_3:
    while (true) {
      if (jj_2_35(5)) {
        ;
      } else {
        break label_3;
      }
      Predicate();
    }
  }

  final public void Predicate() throws ParseException {
    jj_consume_token(21);
    Expr();
    jj_consume_token(22);
  }

  final public void PrimaryExpr() throws ParseException {
    if (jj_2_36(5)) {
      Literal();
    } else if (jj_2_37(5)) {
      ParenthesizedExpr();
    } else if (jj_2_38(5)) {
      FunctionCall();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Literal() throws ParseException {
    if (jj_2_39(5)) {
      NumericLiteral();
    } else if (jj_2_40(5)) {
      jj_consume_token(StringLiteral);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void NumericLiteral() throws ParseException {
    if (jj_2_41(5)) {
      jj_consume_token(IntegerLiteral);
    } else if (jj_2_42(5)) {
      jj_consume_token(DecimalLiteral);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ParenthesizedExpr() throws ParseException {
    jj_consume_token(23);
    Expr();
    jj_consume_token(24);
  }

  final public void FunctionCall() throws ParseException {
    FunctionName();
    jj_consume_token(23);
    if (jj_2_44(5)) {
      Expr();
      label_4:
      while (true) {
        if (jj_2_43(5)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(25);
        Expr();
      }
    } else {
      ;
    }
    jj_consume_token(24);
  }

  final public void FunctionName() throws ParseException {
    if (jj_2_45(5)) {
      jj_consume_token(26);
    } else if (jj_2_46(5)) {
      jj_consume_token(27);
    } else if (jj_2_47(5)) {
      jj_consume_token(28);
    } else if (jj_2_48(5)) {
      jj_consume_token(29);
    } else if (jj_2_49(5)) {
      jj_consume_token(30);
    } else if (jj_2_50(5)) {
      jj_consume_token(31);
    } else if (jj_2_51(5)) {
      jj_consume_token(32);
    } else if (jj_2_52(5)) {
      jj_consume_token(33);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void TextTest() throws ParseException {
    jj_consume_token(26);
    if (jj_2_53(5)) {
      jj_consume_token(23);
      jj_consume_token(24);
    } else {
      ;
    }
  }

  final public void QName() throws ParseException {
    jj_consume_token(QNameToken);
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }
